Added body part and general equipment support.